Getting some blazor done!

--- a/VV.Admin.UI/_Imports.razor
+++ b/VV.Admin.UI/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using VV.Admin.UI
 @using VV.Admin.UI.Shared
+@using VV.Admin.UI.Classes
+@using VV.Admin.UI.Pages.Videos
+@using VV.Admin.UI.Pages.Genres
+@using VV.Admin.UI.Pages.Directors
+@using VV.Admin.UI.Pages.VideoGenres
+@using VV.Admin.UI.Pages.SimilarVideos
+@using VV.Common.DTOs
+@using VV.Common.Extensions
