--- a/VV.Admin.UI/Pages/_Host.cshtml
+++ b/VV.Admin.UI/Pages/_Host.cshtml
@@ -9,7 +9,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5ec369b5eb.js" crossorigin="anonymous"></script>
     <link href="css/site.css" rel="stylesheet" />
     <link href="VV.Admin.UI.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
