--- a/VV.Admin.UI/Shared/MainLayout.razor
+++ b/VV.Admin.UI/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <button type="button" class="btn btn-info">Log In</button>
         </div>
 
         <article class="content px-4">
