--- a/VV.Admin.UI/Shared/MainLayout.razor.css
+++ b/VV.Admin.UI/Shared/MainLayout.razor.css
@@ -9,11 +9,11 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,64,125,1) 50%, rgba(33,112,0,1) 100%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background-image: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,64,125,1) 50%, rgba(33,112,0,1) 100%);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
