--- a/VV.Admin.UI/Shared/NavMenu.razor
+++ b/VV.Admin.UI/Shared/NavMenu.razor
@@ -1,27 +1,42 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VV.Admin.UI</a>
+        <a class="navbar-brand" href="">Video Viewer - Admin</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link p-3" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link p-3" href="/Videos">
+				<span class="oi oi-play-circle" aria-hidden="true"></span>@Routes.Videos
+			</NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link p-3" href="/Genres">
+                <span class="oi oi-list" aria-hidden="true"></span> @Routes.Genres
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link p-3" href="/Directors">
+                <span class="oi oi-play-circle" aria-hidden="true"></span> @Routes.Directors
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link p-3" href="/VideoGenres">
+                <span class="oi oi-briefcase" aria-hidden="true"></span> @Routes.VideoGenres
+            </NavLink>
+        </div><div class="nav-item px-3">
+            <NavLink class="nav-link p-3" href="/SimilarVideos">
+                <span class="oi oi-briefcase" aria-hidden="true"></span> @Routes.SimilarVideos
             </NavLink>
         </div>
     </nav>
