--- a/VV.Admin.UI/Pages/Videos/VideosEdit.razor
+++ b/VV.Admin.UI/Pages/Videos/VideosEdit.razor
@@ -1,4 +1,5 @@
-﻿@inject IAdminService AdminService
+﻿@using System.Text.Json;
+@inject IAdminService AdminService
 <div class="d-xxl-flex justify-content-center">
 	<EditForm Model="@Model" OnValidSubmit="@OnFormSubmit" class="border border-dark rounded p-3 w-25 shadow-lg">
 		<DataAnnotationsValidator />
@@ -77,26 +78,31 @@
 	public List<GenreDTO> AllGenres { get; set; } = new();
 	public int[] GenreIds { get; set; } = new int[] { };
 
+
 	private async Task OnFormSubmit()
 	{
 		try
 		{
+			var selectedGenres = AllGenres.Where(g => GenreIds.Contains(g.Id)).ToList();
 			if (Page.Equals(PageType.Create))
 			{
-				await AdminService.CreateAsync<VideoCreateDTO>("Videos", new VideoCreateDTO
+				var response = await AdminService.CreateAsync<VideoCreateDTO>("Videos", new VideoCreateDTO
 					{
 						Title = Model.Title,
 						Url = Model.Url,
 						ThumbnailUrl = Model.ThumbnailUrl,
 						Description = Model.Description,
 						Released = Model.Released,
-						DirectorId = Model.DirectorId,
-						GenreId = GenreIds.ToList()
+						DirectorId = Model.DirectorId
 					});
+				var tempDTO = await response.Content.ReadFromJsonAsync<VideoEditDTO>();
+				response.Dispose();
+				tempDTO.Genres = selectedGenres;
+				await AdminService.EditAsync($"Videos/{tempDTO.Id}", tempDTO);
 			}
 			else if (Page.Equals(PageType.Edit))
 			{
-				await AdminService.EditAsync<VideoEditDTO>($"Videos/{Model.Id}", new VideoEditDTO
+				var tempDTO = new VideoEditDTO
 					{
 						Id = Model.Id,
 						Title = Model.Title,
@@ -105,14 +111,15 @@
 						Description = Model.Description,
 						Released = Model.Released,
 						DirectorId = Model.DirectorId,
-						GenreId = GenreIds.ToList()
-					});
+						Genres = selectedGenres
+					};
+				await AdminService.EditAsync<VideoEditDTO>($"Videos/{Model.Id}", tempDTO);
 			}
 			else if (Page.Equals(PageType.Delete))
 				await AdminService.DeleteAsync<VideoDTO>($"Videos/{Model.Id}");
 
 			await OnChange.InvokeAsync("");
-			GenreIds = Model.Genres.Select(m => m.Id).ToArray();
+			UpdateSelectedGenres();
 		}
 		catch
 		{
@@ -124,6 +131,11 @@
 	{
 		Directors = await AdminService.GetAsync<DirectorDTO>("Directors");
 		AllGenres = await AdminService.GetAsync<GenreDTO>("Genres");
+		UpdateSelectedGenres();
+	}
+
+	protected void UpdateSelectedGenres()
+	{
 		GenreIds = Model.Genres.Select(m => m.Id).ToArray();
 	}
 }
