--- a/VV.Admin.UI/Pages/Videos/VideosEdit.razor
+++ b/VV.Admin.UI/Pages/Videos/VideosEdit.razor
@@ -123,7 +123,7 @@
 		}
 		catch
 		{
-			await OnChange.InvokeAsync("Couldn't create/edit/delete the course.");
+			await OnChange.InvokeAsync("Something went wrong.");
 		}
 	}
 
