Working on Video and VideoCard

--- a/VV.User.UI/Pages/Index.razor
+++ b/VV.User.UI/Pages/Index.razor
@@ -1,9 +1,13 @@
 ﻿@page "/"
+<div class="d-flex justify-content-center" style="height: 100vh;">
+	<div class="d-flex flex-column justify-content-center">
+		<img src="/images/logoandtext.png" alt="Company Logo" width="350" />
+		<a href="/Start" class="align-self-center">
+			<button type="button" class="btn btn-dark">Log In</button>
+		</a>
+	</div>
+</div>
 
-<PageTitle>Index</PageTitle>
+@code {
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+}
