--- a/VV.User.UI/_Imports.razor
+++ b/VV.User.UI/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using VV.User.UI
 @using VV.User.UI.Shared
+@using VV.Common.Services;
+@using VV.Common.DTOs;
+@using VV.Common.Extensions;
