--- a/VV.User.UI/wwwroot/css/app.css
+++ b/VV.User.UI/wwwroot/css/app.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    
 }
 
 h1:focus {
@@ -10,6 +11,11 @@ h1:focus {
 
 a, .btn-link {
     color: #0071c1;
+}
+
+.gen-list{
+    height: 100px;
+    width:stretch
 }
 
 .btn-primary {
