--- a/VV.User.UI/Shared/MainLayout.razor
+++ b/VV.User.UI/Shared/MainLayout.razor
@@ -1,16 +1,9 @@
 ﻿@inherits LayoutComponentBase
+@inject IUserService UserService
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
+<div class="page bg-dark">
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+        <article class="content p-4">
             @Body
         </article>
     </main>
