--- a/VV.User.UI/Shared/MainLayout.razor.css
+++ b/VV.User.UI/Shared/MainLayout.razor.css
@@ -8,6 +8,12 @@ main {
     flex: 1;
 }
 
+.dashboard{
+    max-width: 1920px;
+    margin: auto;
+    height: 100vh;
+}
+
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
